# stock

./: .clang-format  .gitignore  X.txt
cpp/: CMakeLists.txt  requirements.yaml
cpp/apps/: CMakeLists.txt
cpp/apps/_app1/: CMakeLists.txt  main.cpp
cpp/apps/_stock_prediction/: CMakeLists.txt  main.cpp
cpp/apps/app2/: CMakeLists.txt  main.cpp
cpp/cmake/: CMakeLists.txt  gitTools.cmake  libTools.cmake  macros.cmake
cpp/libs/: CMakeLists.txt
cpp/libs/_aaaa/: cnn.hpp  cnn_test.cpp  conv1_test.cpp  conv1d.hpp  fnn.hpp  fnn_test.cpp  layer_test.cpp  vector.hpp  vector_test.cpp
cpp/libs/_aaaa/lstm/: CMakeLists.txt  lstm.cpp
cpp/libs/_aaaa/lstm/include/lstm/: lstm.hpp
cpp/libs/_aaaa/lstm/test/: lstm_test.cpp
cpp/libs/_aaaa/math/include/math/: spline.hpp
cpp/libs/_aaaa/math/test/: spline_test.cpp
cpp/libs/_aaaa/nn/: CMakeLists.txt
cpp/libs/_aaaa/nn/include/nn/: activation_funcs.hpp  layer.hpp
cpp/libs/_aaaa/nn/test/: activation_funcs_test.cpp  layer_test.cpp
cpp/libs/json/: CMakeLists.txt
cpp/libs/json/include/json/: json.hpp
cpp/libs/json/include/test/: test_json.cpp
cpp/libs/json/src/: json.cpp
cpp/libs/math/: CMakeLists.txt
cpp/libs/math/include/math/: band_matrix.hpp  complex.hpp
cpp/libs/math/src/: band_matrix.cpp  spline.cpp
cpp/libs/math/test/: spline_test.cpp
cpp/libs/matrix/: CMakeLists.txt
cpp/libs/matrix/gtest/: gtest_matirx.cpp
cpp/libs/matrix/include/matrix/: complex.hpp  matrix.hpp  qr.hpp  special_matrix.hpp  utils.hpp  vector.hpp
cpp/libs/matrix/test/: complex_test.cpp  matrix_test.cpp  qr_test.cpp
cpp/libs/nn/: CMakeLists.txt
cpp/libs/nn/include/nn/: activation_funcs.hpp  adam.hpp  aram.hpp  fnn.hpp  layer.hpp
cpp/libs/nn/test/: activation_funcs_test.cpp  fnn_test.cpp  layer_test.cpp
cpp/libs/time/: CMakeLists.txt
cpp/libs/time/include/time/: time.hpp
cpp/sources/: matrix.natvis
cpp/tests/_un/collisioin/: CMakeLists.txt  collision.cpp
cpp/tests/_un/collisioin/include/collision/: collision.hpp
cpp/tests/_un/collisioin/test/: CMakeLists.txt  collision_test.cpp
cpp/tests/_un/cppyaml/: CMakeLists.txt  main.cpp
cpp/tests/_un/eigen/: CMakeLists.txt  main.cpp
cpp/tests/_un/opencv/: CMakeLists.txt  opencv_test.cpp
cpp/tests/plot/: CMakeLists.txt  main.cpp
data/: A.csv  AAL.csv  AAPL.csv  ABBV.csv  ABNB.csv  ABT.csv  ACGL.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AFL.csv  AIG.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALL.csv  ALLE.csv  AMAT.csv  AMCR.csv  AMD.csv  AME.csv  AMGN.csv  AMP.csv  AMT.csv  AMZN.csv  ANET.csv  ANSS.csv  AON.csv  AOS.csv  APA.csv  APD.csv  APH.csv  (+489 more)
etc/scripts/: installOpenCV.bat  installOpenCV.sh  linux_build.sh  linux_install.sh  linux_release.sh  win_build.bat  win_release.bat  win_test.bat
models/: LSTM_ABNB.keras  LSTM_GOOG.keras  LSTM_NASDAQ-100_Close.keras
pine/: extrapolation.pine  kalman_filter.pine  nn.pine  nne.pine
python/: StockStatistics.py  UnscentedKalmanFilter.py  painter.py
python/LSTM/: classifier.py  lstm.py  prediction.py
python/RNN/: main.py
python/scraper/: stock_scraper.py  (+1 more)
